deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: nehalwandhare/vote:d995cb331c0beeeb0898386aae32948abcadbfe1
        ports:
        - containerPort: 80

        # 🔥 ADD THIS
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
